--- a/templates/profile-info.html
+++ b/templates/profile-info.html
@@ -102,6 +102,12 @@
 											<input type="password" class="form-control" name="password2" value="" />
 										</div>
 									</div>
+									<div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+										<div class="form-group">
+											<label class=" text-dark ft-medium">address </label>
+											<input type="text" class="form-control" name="address" value="{{ user.profile.address }}" />
+										</div>
+									</div>
                                     
                                     
                                     <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
@@ -140,7 +146,7 @@
                                 
                                     <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
 										<div class="form-group">
-											<label class=" text-dark ft-medium">Postal code *</label>
+											<label class=" text-dark ft-medium">Zip code *</label>
 											<input type="text" name="postal_code" class="form-control" value="{{profile.postal_code}}" />
 										</div>
 									</div>
