--- a/templates/register.html
+++ b/templates/register.html
@@ -63,6 +63,10 @@
 									<label>Address *</label>
 									<input type="text" class="form-control" name="address" placeholder="Address *" required>
 								</div>
+                                <div class="form-group">
+									<label>Zip code *</label>
+									<input type="text" class="form-control" name="postal_code" placeholder="Zip code *" required>
+								</div>
                                 <div class="row">
 									<div class="form-group col-md-6">
 										<label>Country *</label>
