--- a/templates/custom.html
+++ b/templates/custom.html
@@ -391,6 +391,20 @@
                       >
                         <i class="fas fa-arrow-down"></i> backwared
                       </button>
+                      <button
+                        type="button"
+                        class="btn btn-secondary"
+                        onclick="redo()"
+                      >
+                        <i class="fas fa-arrow-up"></i>Redo
+                      </button>
+                      <button
+                        type="button"
+                        class="btn btn-secondary"
+                        onclick="undo()"
+                      >
+                        <i class="fas fa-arrow-down"></i> Undo
+                      </button>
                      
                     </div>
                     <div class="tab-content pt-3 text-muted">
@@ -860,7 +874,7 @@
                                       
 
                                       <div class="ClipArts">
-                                        <div class="row otherrow">
+                                        <div class="row otherrow" id="user-images">
                                        {% if user.is_authenticated %}
                                           {% if user_images %} 
                                                     {% for user_image in user_images %}
@@ -1431,7 +1445,7 @@
                                   aria-labelledby="flush-heading_Save_Load_3"
                                   data-bs-parent="#accordionSave_Load_3"
                                 >
-                                  <div class="accordion-body text-muted d-flex">
+                                  <div class="accordion-body text-muted d-flex" id="load-design">
                                     {% for design in product_designs %}
                                     <div class="p-3">
                                       <img
@@ -3057,8 +3071,25 @@
           processData: false, // Don't process the data
           contentType: false, // Don't set content type (it will be set automatically)
           success: function (data) {
-            console.log(data);
-            // Handle the response data (e.g., image URL)
+            swal.fire("Image Uploaded Successfully");
+            // get dev by id load-design
+            var load_design = document.getElementById("user-images");
+            // src = sended image file
+            load_design.innerHTML +=`
+            <div
+            class="col-lg-2 col-md-2 col-sm-6 col-xs-6 othercol"
+        >
+            <div class="ArtItem">
+            <div class="image">
+                <img
+                onclick="addImage(this.src)"
+                src="${data.image_url}"
+                />
+            </div>
+            </div>
+        </div>
+            `;
+            
           },
           error: function (data) {
             console.log(data);
