--- a/templates/custom.html
+++ b/templates/custom.html
@@ -3054,6 +3054,8 @@
 
     <script>
       projecturl = "http://127.0.0.1:8000/";
+      //projecturl = "http://furydgp.com/";
+
       // function addImage
       function uploadimage(inputElement) {
         // get crftoken value from crftokenform input
