--- a/static/assets/css/custom.css
+++ b/static/assets/css/custom.css
@@ -9,13 +9,19 @@ position: absolute;
     width: 100%;
     height: 100%;
     border: 1px dashed #eac97a;
+    display: flex;
+    align-items: center;
   }
   
   .canvas-container {
-    width: 100% !important;
-    height: 100% !important;
+    /*width: 100% !important; */
+    height: calc(100% - 0px);
     position: relative;
     user-select: none;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
   
   #tshirt-div {
@@ -36,9 +42,9 @@ width: 100%;
   
   #canvas {
     position: absolute;
-    width: 200px;
-    height: 400px;
-          height: 100% !important;
+    width: auto;
+    height: auto;
+          /* height: 100% !important; */
     left: 0px;
     top: 0px;
     user-select: none;
@@ -46,16 +52,20 @@ width: 100%;
   }
   
 #tshirt-canvas-front{
-    width: 100% !important;
+    width: auto !important;
         height: 100% !important;
+        top: auto !important;
+        left: auto !important;
 }
 #tshirt-canvas-back{
-    width: 100% !important;
+    width: auto !important;
         height: 100% !important;
 }
 .upper-canvas {
-        width: 100% !important;
-        height: 100% !important;
+        width: auto !important;
+        height: auto !important;
+        /* top: auto !important;
+        left: auto !important; */
 }
 
 
