--- a/static/assets/css/custom.css
+++ b/static/assets/css/custom.css
@@ -11,12 +11,13 @@ position: absolute;
     border: 1px dashed #eac97a;
     display: flex;
     align-items: center;
+    justify-content: center;
     
   }
   
   .canvas-container {
-    /*width: 100% !important; */
-    height: calc(100% - 0px);
+    width: 100% !important;
+    height: calc(100% - 0px) !important;
     position: relative;
     user-select: none;
     overflow: hidden;
@@ -53,20 +54,20 @@ width: 100%;
   }
   
 #tshirt-canvas-front{
-    width: auto !important;
+    width: 100% !important;
         height: 100% !important;
         top: auto !important;
         left: auto !important;
 }
 #tshirt-canvas-back{
-    width: auto !important;
+    width: 100% !important;
     height: 100% !important;
     top: auto !important;
     left: auto !important;
 }
 .upper-canvas {
-        width: auto !important;
-        height: auto !important;
+        width: 100% !important;
+        height: 100% !important;
         /* top: auto !important;
         left: auto !important; */
 }
@@ -77,6 +78,7 @@ width: 100%;
 }
 .TeshertDive .ImageTeshert{
     width: 100%;
+    height: 100%;
 }
 
 .CustomTapsDesign{
@@ -773,7 +775,7 @@ img{
 }
 
 
-@media(max-width:768px){
+/* @media(max-width:768px){
     .upper-canvas {
         width: 100% !important;
         height: auto !important;
@@ -790,4 +792,4 @@ img{
         top: auto !important;
         left: auto !important;
     }
-}
+} */
