--- a/templates/base.html
+++ b/templates/base.html
@@ -65,7 +65,11 @@
 									</a>
 								</li>
 								{% endif %}
-								
+								<li>
+									<a href="{% url 'product:card' %}" style="color: #fff;" >
+										<i class="lni lni-shopping-basket"></i><span class="dn-counter theme-bg">1</span>
+									</a>
+								</li>
 								</ul>
 							</div>
 						</div>
@@ -105,7 +109,7 @@
 								</li>
 								<li>
 									<a href="{% url 'product:card' %}" >
-										<i class="lni lni-shopping-basket"></i><span class="dn-counter theme-bg"></span>
+										<i class="lni lni-shopping-basket"></i><span class="dn-counter theme-bg">1</span>
 									</a>
 								</li>
 								{% else %}
