--- a/static/assets/css/custom.css
+++ b/static/assets/css/custom.css
@@ -150,7 +150,7 @@ font-size: 12px;
     
 }
 .CustomTapsDesign .CustomTapsbody .TapsContentBody .tab-content{
-    max-height: 750px;
+    max-height: 470px;
     overflow: auto;
 }
 
@@ -245,7 +245,7 @@ font-size: 12px;
 
 .CustomTapsDesign .ProductTap .accordion-body .ProductItems .ProItem .Image{
     display: flex;
-    height: 110px;
+    height: 82px;
     width: 100%;
     align-items: center;
     padding: 0;
@@ -254,13 +254,15 @@ font-size: 12px;
 }
 .CustomTapsDesign .ProductTap .accordion-body .ProductItems .ProItem.active .Image{
     border: 3px solid #edb003;
-    height: 120px;
+    height: 85px;
     border-bottom: 0;
     margin-bottom: 0;
     background: #0e0e0e;
+    display: flex;
+    align-items: center;
 }
 .CustomTapsDesign .ProductTap .accordion-body .ProductItems .ProItem .Image img{
-    height: 90%;
+    height: auto;
     width: max-content;
     margin: auto;
     background: white;
@@ -306,11 +308,11 @@ font-size: 12px;
 }
 .CustomTapsDesign .ProductTap .accordion-body .ProductColor .SizeBoxs .SizeItem{
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 0px;
 }
 .CustomTapsDesign .ProductTap .accordion-body .ProductColor .SizeBoxs .SizeItem p{
     margin: 0;
-    font-size: 20px;
+    font-size: 18px;
     color: #eac97a;
     font-weight: 400;
 }
@@ -462,7 +464,7 @@ padding: 5px 10px;
 }
 .CustomTapsDesign .AcordyBodyInputs .ClipArts .ArtItem .image{
         display: flex;
-    height: 110px;
+    height: 70px;
     border: 1px solid #eac97a;
     width: 100%;
     align-items: center;
@@ -627,21 +629,38 @@ padding: 13px 10px;
 }
 
 .AllFornt_BackImages{
-    
+    position: relative;
 }
 .AllFornt_BackImages .product-tab-info{
-    margin-top: 30px;
+    position: absolute;
+    top: 0;
+    z-index: 99;
+    display: block;
+}
+.CustomButonsDesignnnn{
+    bottom: 0;
+    top: auto !important;
+    display: flex !important;
+    width: 100% !important;
+    margin: auto !important;
+    left: auto !important;
+    justify-content: center !important;
+}
+.AllFornt_BackImages .CustomButonsDesignnnn .product-tab-info-link{
+width: 55px !important;
 }
 .AllFornt_BackImages .product-tab-info .product-tab-info-link{
     display: block;
-    width: 100px;
-    background: #fff;
-    border: 0px solid #edb003;
-    color: #eac97a;
+    width: 50px;
+    background: #ffffffa3;
+    border: 1px solid #eeeeee;
+    color: #5e5e5e;
     margin: 0;
-    font-size: 15px;
-    height: 40px;
-    font-weight: 500;
+    font-size: 12px;
+    height: 55px;
+    font-weight: 400;
+    line-height: 14px;
+
 }
 .AllFornt_BackImages .product-tab-info .product-tab-info-link.active{
     background: linear-gradient(45deg, rgba(115,69,18,1) 0%, rgba(234,201,122,1) 100%);
@@ -773,23 +792,43 @@ img{
 .stretched-link:after{
     display: none;
 }
+.loadDesignItem{
+    display: inline-block;
+    margin: 5px;
+}
+.loadDesignItem img{
+    
+}
+@media(max-width:768px){
 
-
-/* @media(max-width:768px){
-    .upper-canvas {
-        width: 100% !important;
-        height: auto !important;
+    .btn-group-vertical{
+        display: flex !important;
     }
-    #tshirt-canvas-front {
-        width: 100% !important;
-        height: auto !important;
-        top: auto !important;
-        left: auto !important;
+    .btn-group-vertical .btn{
+        width: max-content;
+        margin: 0;
     }
-    #tshirt-canvas-back {
-        width: 100% !important;
-        height: auto !important;
-        top: auto !important;
-        left: auto !important;
+    .btn-group-vertical .btn i {
+        margin-left: 0;
     }
-} */
+    .AllFornt_BackImages .product-tab-info {
+        margin-top: 0px;
+        margin-bottom: 0px !important;
+    }
+    .CustomTapsDesign .CustomTapsbody .TapsHeaders ul li{
+        height: 50px;
+    }
+    .AllFornt_BackImages .product-tab-info .product-tab-info-link {
+        width: 40px;
+        font-size: 12px;
+        height: 45px;
+        line-height: 10px;
+    }
+    .SizeBoxs .col-xs-6 {
+        width: calc(100% / 6) !important;
+        padding: 5px !important;
+    }
+    .CustomTapsDesign .CustomTapsbody .TapsHeaders ul li .nav-link img{
+        width: 20px;
+    }
+}
